[package]
name = "tm4c123x"
version = "0.3.0"
authors = ["whitequark <whitequark@whitequark.org>"]
description = "Peripheral access API for TI TM4C123x microcontrollers"
documentation = "https://docs.rs/tm4c123x"
repository = "https://github.com/m-labs/dslite2svd"
keywords = ["arm", "cortex-m", "tm4c", "tiva-c"]
categories = ["embedded"]
license = "0BSD"

[dependencies]
cortex-m = "0.2"
vcell = "0.1"
